# dr

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  RELEASE.md
src/: analyzer.rs  cache.rs  format.rs  lib.rs  main.rs  models.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: integration.rs
